fix footer on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -349,13 +349,8 @@ footer .wrapper {
    
 }
 
-footer h2 {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 3em;
-  color: white;
-  text-align: center;
-  width: 100%;
-  padding: 0 1em;
+#footer-social {
+  padding: 0.75em;
 }
 
 footer p {
@@ -378,7 +373,7 @@ footer a:hover {
 #footer-nav {
   width: 100%;
   margin: 1em auto;
-  padding: 1em;
+  /*padding: 1em;*/
 }
 
 #disclaimer {
@@ -386,7 +381,7 @@ footer a:hover {
   font-size: 0.75em;
   width: 100%;
   margin: 0 auto;
-  padding-bottom: 0.5em;
+  padding-bottom: 3em;
 }
 
 @media all and (max-width: 650px) {
@@ -394,7 +389,11 @@ footer a:hover {
     position: fixed;
     bottom: 0;
     background-color: #1A2061;
-    z-index: 2;
+    z-index: 9999;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
   }
 }
 
